Modify and reformat